# zero2prod

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: general.yml
migrations/: 20250308063324_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
