[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Dragan Glumac <dragan.glumac@gmail.com"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
pkg-config = "0.3.31"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.12"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]
